<resources>
    <string name="app_name">My Form</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="date">Date of Birth</string>
    <string name="upload">Upload a Picture</string>
    <string name="Register">Register</string>
    <string name="moto">Fill the form build your profile!</string>
    <string name="mob">Mobile app development in Android</string>
    <string name="getStarted">Get Started</string>
    <string name="create">Create an account</string>
    <string name="av">Available languages</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="show">Show</string>
    <string name="copy">copy</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources><!--    English     -->