<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_show"
        android:title="@string/show"
        android:icon="@drawable/show_svgrepo_com"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete_svgrepo_com"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_Edit"
        android:icon="@drawable/edit_svgrepo_com"
        android:title="@string/edit"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/copy_svgrepo_com"
        android:title="@string/copy"
        app:showAsAction="ifRoom"
        />
</menu>
