<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download_leaf_one"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="22dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="268dp"
        android:fontFamily=""
        android:paddingStart="22dp"
        android:text="@string/mob"
        android:textColor="@color/nech"
        android:textSize="54sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/GetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/GetStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="33dp"
        android:background="@drawable/getstarted"
        android:elevation="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:paddingStart="42dp"
        android:paddingEnd="42dp"
        android:text="@string/getStarted"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="129dp"
        android:gravity="center"
        android:text="@string/create"
        android:textColor="@color/nech"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>