<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/form_back"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:clipToOutline="true"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:background="@drawable/transparent_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            android:layout_width="56dp"
            android:layout_height="51dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="22dp"
            android:contentDescription="back"
            android:gravity="center"
            android:padding="22dp"
            app:backgroundTint="@color/necht"
            app:icon="@drawable/baseline_arrow_back_ios_24"
            app:iconGravity="start"
            app:iconPadding="0dp"
            app:iconTint="@color/brown" />
        <!--            app:shapeAppearanceOverlay="@style/RoundedButton" -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textColor="@color/nech"
            android:textSize="33sp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moto"
            android:textColor="@color/necht"
            android:layout_marginTop="4sp"
            android:textSize="13sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            android:ems="10"
            android:drawableStart="@drawable/profile_svgrepo_com"
            android:backgroundTint="@color/nech"
            android:paddingStart="22dp"
            android:background="@drawable/getstarted"
            android:hint="@string/name"
            android:drawablePadding="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="22dp"
            android:minHeight="46dp"
            android:textColorHint="@color/necht"
            android:inputType="text" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="46dp"
            android:ems="10"
            android:backgroundTint="@color/nech"
            android:paddingStart="22dp"
            android:background="@drawable/getstarted"
            android:hint="@string/email"
            android:drawablePadding="22dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:drawableStart="@drawable/baseline_attach_email_24"
            android:textColorHint="@color/necht"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="46dp"
            android:ems="10"
            android:layout_marginTop="22dp"
            android:backgroundTint="@color/nech"
            android:paddingStart="22dp"
            android:background="@drawable/getstarted"
            android:hint="Phone number"
            android:drawablePadding="22dp"
            android:drawableStart="@drawable/baseline_add_ic_call_24"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:textColorHint="@color/necht"
            android:inputType="phone" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="46dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:layout_marginTop="22dp"
            android:backgroundTint="@color/nech"
            android:paddingStart="22dp"
            android:background="@drawable/getstarted"
            android:hint="@string/date"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:textColorHint="@color/necht"
            android:drawableStart="@drawable/date_2_svgrepo_com"
            android:drawablePadding="22sp"
            android:inputType="date" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="0dp"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upload"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:backgroundTint="@color/brown"
                android:contentDescription="imageupload"
                app:icon="@drawable/baseline_add_24"
                app:iconTint="@color/white" />
            <TextView
                android:id="@+id/isuploaded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/nech"
                android:layout_marginStart="12dp"
                android:text="@string/upload"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/bottom_curve"
            android:text="@string/Register"
            android:textColor="@color/nech"
            app:backgroundTint="@color/beige"

            app:cornerRadius="0dp" />
    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>